// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render multiple expenses summary correctly 1`] = `
<div>
  Viewing 
  2
   
  expenses
   totalling 
  $25.00
</div>
`;

exports[`should render single expense summary correctly 1`] = `
<div>
  Viewing 
  1
   
  expense
   totalling 
  $2.50
</div>
`;
